updated one var to binary

--- a/Game/1D Comp Struct/work/vivado/1D Comp Struct/1D Comp Struct.runs/impl_1/usage_statistics_webtalk.html
+++ b/Game/1D Comp Struct/work/vivado/1D Comp Struct/1D Comp Struct.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>3064766</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Apr 15 20:16:50 2022</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Apr 15 20:40:43 2022</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2020.2 (64-bit)</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>5cc301d2c3934dedb7a737f63769c2be</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>628e97e242824793b8b336d39f42ac5c</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>986f7a19961d526f870cc0f2733caeae</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>986f7a19961d526f870cc0f2733caeae</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>fa14662215515e1983d346cdaf5541f0</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>fa14662215515e1983d346cdaf5541f0</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a35t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2592 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-10510U CPU @ 1.80GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2304 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Windows Server 2016 or Windows 10</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>12.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -211,7 +211,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000987</TD>
+    <TD>clocks=0.001017</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -223,7 +223,7 @@
     <TD>devstatic=0.071707</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tftg256-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.003850</TD>
+    <TD>dynamic=0.003906</TD>
     <TD>effective_thetaja=4.85</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
@@ -233,7 +233,7 @@
     <TD>i/o=0.002428</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.4 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000188</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000199</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -244,7 +244,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.075557</TD>
+    <TD>on-chip_power=0.075613</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
@@ -258,7 +258,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.000247</TD>
+    <TD>signals=0.000262</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -287,9 +287,9 @@
     <TD>vccbram_static_current=0.000161</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000161</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.001490</TD>
-    <TD>vccint_static_current=0.009538</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.011028</TD>
+    <TD>vccint_dynamic_current=0.001546</TD>
+    <TD>vccint_static_current=0.009539</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.011085</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -501,23 +501,23 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
     <TD>lut_in_front_of_the_register_is_unused_used=8</TD>
     <TD>lut_in_front_of_the_register_is_used_fixed=8</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=5</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=5</TD>
-    <TD>register_driven_from_outside_the_slice_used=13</TD>
-    <TD>register_driven_from_within_the_slice_fixed=13</TD>
-    <TD>register_driven_from_within_the_slice_used=79</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=4</TD>
+    <TD>register_driven_from_outside_the_slice_used=12</TD>
+    <TD>register_driven_from_within_the_slice_fixed=12</TD>
+    <TD>register_driven_from_within_the_slice_used=80</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=92</TD>
     <TD>slice_registers_util_percentage=0.22</TD>
-    <TD>slice_used=40</TD>
-    <TD>slice_util_percentage=0.49</TD>
+    <TD>slice_used=39</TD>
+    <TD>slice_util_percentage=0.48</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
     <TD>slicel_used=26</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=14</TD>
+    <TD>slicem_used=13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
     <TD>unique_control_sets_used=9</TD>
@@ -619,10 +619,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:29s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:54s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=0.000MB</TD>
-    <TD>memory_peak=999.969MB</TD>
+    <TD>memory_gain=19.809MB</TD>
+    <TD>memory_peak=1030.270MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
