Timer reset to 5

--- a/Game/1D Comp Struct/work/vivado/1D Comp Struct/1D Comp Struct.runs/impl_1/usage_statistics_webtalk.html
+++ b/Game/1D Comp Struct/work/vivado/1D Comp Struct/1D Comp Struct.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>3064766</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Apr 15 22:54:47 2022</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Apr 16 00:24:08 2022</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2020.2 (64-bit)</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>eac9c304d0924f508c31812ef55faf96</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>361a48fed40e4d25b83f4c5627376be3</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>fa14662215515e1983d346cdaf5541f0</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>fa14662215515e1983d346cdaf5541f0</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>986f7a19961d526f870cc0f2733caeae</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>986f7a19961d526f870cc0f2733caeae</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a35t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-10510U CPU @ 1.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2304 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2592 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Windows Server 2016 or Windows 10</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>12.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -71,38 +71,38 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=17</TD>
-    <TD>fdre=167</TD>
-    <TD>fdse=68</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=11</TD>
-    <TD>ibuf=4</TD>
-    <TD>lut1=11</TD>
-    <TD>lut2=3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=13</TD>
-    <TD>lut4=33</TD>
-    <TD>lut5=47</TD>
-    <TD>lut6=16</TD>
+    <TD>carry4=36</TD>
+    <TD>fdre=174</TD>
+    <TD>fdse=10</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=21</TD>
+    <TD>ibuf=8</TD>
+    <TD>lut1=21</TD>
+    <TD>lut2=20</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=2</TD>
+    <TD>lut4=50</TD>
+    <TD>lut5=11</TD>
+    <TD>lut6=18</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf=53</TD>
-    <TD>vcc=11</TD>
+    <TD>vcc=22</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=17</TD>
-    <TD>fdre=167</TD>
-    <TD>fdse=68</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=11</TD>
-    <TD>ibuf=4</TD>
-    <TD>lut1=11</TD>
-    <TD>lut2=3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=13</TD>
-    <TD>lut4=33</TD>
-    <TD>lut5=47</TD>
-    <TD>lut6=16</TD>
+    <TD>carry4=36</TD>
+    <TD>fdre=174</TD>
+    <TD>fdse=10</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=21</TD>
+    <TD>ibuf=8</TD>
+    <TD>lut1=21</TD>
+    <TD>lut2=20</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=2</TD>
+    <TD>lut4=50</TD>
+    <TD>lut5=11</TD>
+    <TD>lut6=18</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf=53</TD>
-    <TD>vcc=11</TD>
+    <TD>vcc=22</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -211,29 +211,29 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.001338</TD>
+    <TD>clocks=0.001401</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
     <TD>confidence_level_internal_activity=Medium</TD>
-    <TD>confidence_level_io_activity=Medium</TD>
-</TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Medium</TD>
+    <TD>confidence_level_io_activity=Low</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.071711</TD>
+    <TD>devstatic=0.071713</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tftg256-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.005662</TD>
+    <TD>dynamic=0.007082</TD>
     <TD>effective_thetaja=4.85</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.002429</TD>
+    <TD>i/o=0.004745</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.4 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000761</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000406</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -244,13 +244,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.077372</TD>
+    <TD>on-chip_power=0.078796</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=ftg256</TD>
 </TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=1.000000</TD>
-    <TD>pct_inputs_defined=25</TD>
+    <TD>pct_inputs_defined=12</TD>
     <TD>platform=nt64</TD>
     <TD>process=typical</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ram_enable=50.000000</TD>
@@ -258,7 +258,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.001135</TD>
+    <TD>signals=0.000530</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -275,21 +275,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000087</TD>
+    <TD>vccaux_dynamic_current=0.000171</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
     <TD>vccaux_static_current=0.012615</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012702</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012787</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
-    <TD>vccbram_static_current=0.000161</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000161</TD>
+    <TD>vccbram_static_current=0.000162</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.003301</TD>
-    <TD>vccint_static_current=0.009542</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.012843</TD>
+    <TD>vccint_dynamic_current=0.002405</TD>
+    <TD>vccint_static_current=0.009544</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.011950</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -311,9 +311,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.000668</TD>
+    <TD>vcco33_dynamic_current=0.001324</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001668</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.002324</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2020.2</TD>
 </TR>   </TABLE>
@@ -428,25 +428,25 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=1</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=17</TD>
+    <TD>carry4_used=36</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=167</TD>
+    <TD>fdre_used=177</TD>
     <TD>fdse_functional_category=Flop &amp; Latch</TD>
-    <TD>fdse_used=68</TD>
+    <TD>fdse_used=10</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
-    <TD>ibuf_used=4</TD>
+    <TD>ibuf_used=8</TD>
     <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=10</TD>
+    <TD>lut1_used=21</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=3</TD>
+    <TD>lut2_used=20</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=13</TD>
+    <TD>lut3_used=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=33</TD>
+    <TD>lut4_used=50</TD>
     <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=47</TD>
+    <TD>lut5_used=11</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=16</TD>
+    <TD>lut6_used=18</TD>
     <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=53</TD>
 </TR>   </TABLE>
@@ -464,34 +464,34 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=101</TD>
-    <TD>lut_as_logic_util_percentage=0.49</TD>
+    <TD>lut_as_logic_used=99</TD>
+    <TD>lut_as_logic_util_percentage=0.48</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=235</TD>
-    <TD>register_as_flip_flop_util_percentage=0.56</TD>
+    <TD>register_as_flip_flop_used=187</TD>
+    <TD>register_as_flip_flop_util_percentage=0.45</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=101</TD>
-    <TD>slice_luts_util_percentage=0.49</TD>
+    <TD>slice_luts_used=99</TD>
+    <TD>slice_luts_util_percentage=0.48</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=235</TD>
-    <TD>slice_registers_util_percentage=0.56</TD>
+    <TD>slice_registers_used=187</TD>
+    <TD>slice_registers_util_percentage=0.45</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=101</TD>
-    <TD>lut_as_logic_util_percentage=0.49</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=99</TD>
+    <TD>lut_as_logic_util_percentage=0.48</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -499,35 +499,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=86</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=86</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=8</TD>
-    <TD>register_driven_from_outside_the_slice_used=94</TD>
-    <TD>register_driven_from_within_the_slice_fixed=94</TD>
-    <TD>register_driven_from_within_the_slice_used=141</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=9</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=9</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=12</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=12</TD>
+    <TD>register_driven_from_outside_the_slice_used=21</TD>
+    <TD>register_driven_from_within_the_slice_fixed=21</TD>
+    <TD>register_driven_from_within_the_slice_used=166</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=235</TD>
-    <TD>slice_registers_util_percentage=0.56</TD>
-    <TD>slice_used=65</TD>
-    <TD>slice_util_percentage=0.80</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=187</TD>
+    <TD>slice_registers_util_percentage=0.45</TD>
+    <TD>slice_used=77</TD>
+    <TD>slice_util_percentage=0.94</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=47</TD>
+    <TD>slicel_used=57</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=18</TD>
+    <TD>slicem_used=20</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
-    <TD>unique_control_sets_used=12</TD>
-    <TD>unique_control_sets_util_percentage=0.15</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.15</TD>
-    <TD>using_o5_and_o6_used=21</TD>
-    <TD>using_o5_output_only_fixed=21</TD>
+    <TD>unique_control_sets_used=13</TD>
+    <TD>unique_control_sets_util_percentage=0.16</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.16</TD>
+    <TD>using_o5_and_o6_used=23</TD>
+    <TD>using_o5_output_only_fixed=23</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=80</TD>
+    <TD>using_o6_output_only_used=76</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -619,10 +619,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:41s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:29s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=21.531MB</TD>
-    <TD>memory_peak=1034.117MB</TD>
+    <TD>memory_gain=0.000MB</TD>
+    <TD>memory_peak=999.535MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
