shift along with invalid
the program gets stuck at invalid though

--- a/Game/stateintegration/work/vivado/stateintegration/stateintegration.runs/impl_1/usage_statistics_webtalk.html
+++ b/Game/stateintegration/work/vivado/stateintegration/stateintegration.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>3064766</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Apr 16 02:51:57 2022</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Apr 16 15:07:16 2022</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2020.2 (64-bit)</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>5621045169bd42608508076fff042776</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>a0b8dd30ef4b44abb5dfa90883bccdd4</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>fa14662215515e1983d346cdaf5541f0</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>fa14662215515e1983d346cdaf5541f0</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>a5042135253f55b4bd368501bc0be0c7</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>a5042135253f55b4bd368501bc0be0c7</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a35t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-10510U CPU @ 1.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2304 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-4600M CPU @ 2.90GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2893 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Windows Server 2016 or Windows 10</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>12.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -72,19 +72,18 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
     <TD>carry4=35</TD>
-    <TD>fdre=302</TD>
-    <TD>fdse=67</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=20</TD>
+    <TD>fdre=330</TD>
+    <TD>fdse=68</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=19</TD>
     <TD>ibuf=7</TD>
-    <TD>lut1=18</TD>
-    <TD>lut2=26</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=26</TD>
-    <TD>lut4=93</TD>
-    <TD>lut5=98</TD>
-    <TD>lut6=76</TD>
-</TR><TR ALIGN='LEFT'>    <TD>muxf7=16</TD>
-    <TD>obuf=53</TD>
-    <TD>vcc=19</TD>
+    <TD>lut1=17</TD>
+    <TD>lut2=37</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=30</TD>
+    <TD>lut4=103</TD>
+    <TD>lut5=95</TD>
+    <TD>lut6=97</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=53</TD>
+    <TD>vcc=20</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -92,19 +91,18 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
     <TD>carry4=35</TD>
-    <TD>fdre=302</TD>
-    <TD>fdse=67</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=20</TD>
+    <TD>fdre=330</TD>
+    <TD>fdse=68</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=19</TD>
     <TD>ibuf=7</TD>
-    <TD>lut1=18</TD>
-    <TD>lut2=26</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=26</TD>
-    <TD>lut4=93</TD>
-    <TD>lut5=98</TD>
-    <TD>lut6=76</TD>
-</TR><TR ALIGN='LEFT'>    <TD>muxf7=16</TD>
-    <TD>obuf=53</TD>
-    <TD>vcc=19</TD>
+    <TD>lut1=17</TD>
+    <TD>lut2=37</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=30</TD>
+    <TD>lut4=103</TD>
+    <TD>lut5=95</TD>
+    <TD>lut6=97</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=53</TD>
+    <TD>vcc=20</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -213,7 +211,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.002350</TD>
+    <TD>clocks=0.002910</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -222,20 +220,20 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.071765</TD>
+    <TD>devstatic=0.071731</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tftg256-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.032388</TD>
+    <TD>dynamic=0.015545</TD>
     <TD>effective_thetaja=4.85</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.023884</TD>
+    <TD>i/o=0.009242</TD>
     <TD>input_toggle=12.500000</TD>
-    <TD>junction_temp=25.5 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.002376</TD>
+    <TD>junction_temp=25.4 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.001138</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -246,7 +244,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.104153</TD>
+    <TD>on-chip_power=0.087276</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
@@ -260,7 +258,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.003779</TD>
+    <TD>signals=0.002255</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -270,28 +268,28 @@
 </TR><TR ALIGN='LEFT'>    <TD>toggle_rate=False</TD>
     <TD>user_board_temp=25.0 (C)</TD>
     <TD>user_effective_thetaja=4.85</TD>
-    <TD>user_junc_temp=25.5 (C)</TD>
+    <TD>user_junc_temp=25.4 (C)</TD>
 </TR><TR ALIGN='LEFT'>    <TD>user_thetajb=8.2 (C/W)</TD>
     <TD>user_thetasa=4.6 (C/W)</TD>
     <TD>vccadc_dynamic_current=0.000000</TD>
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000873</TD>
+    <TD>vccaux_dynamic_current=0.000336</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.012619</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.013491</TD>
+    <TD>vccaux_static_current=0.012617</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012953</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
     <TD>vccbram_static_current=0.000162</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.008572</TD>
-    <TD>vccint_static_current=0.009589</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.018161</TD>
+    <TD>vccint_dynamic_current=0.006371</TD>
+    <TD>vccint_static_current=0.009559</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.015930</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -313,9 +311,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.006741</TD>
+    <TD>vcco33_dynamic_current=0.002597</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.007741</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.003597</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2020.2</TD>
 </TR>   </TABLE>
@@ -432,26 +430,24 @@
     <TD>carry4_functional_category=CarryLogic</TD>
     <TD>carry4_used=35</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=302</TD>
+    <TD>fdre_used=338</TD>
     <TD>fdse_functional_category=Flop &amp; Latch</TD>
-    <TD>fdse_used=67</TD>
+    <TD>fdse_used=68</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=7</TD>
     <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=18</TD>
+    <TD>lut1_used=17</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=26</TD>
+    <TD>lut2_used=37</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=26</TD>
+    <TD>lut3_used=30</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=93</TD>
+    <TD>lut4_used=103</TD>
     <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=98</TD>
+    <TD>lut5_used=95</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=76</TD>
-    <TD>muxf7_functional_category=MuxFx</TD>
-    <TD>muxf7_used=16</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
+    <TD>lut6_used=97</TD>
+    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=53</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -460,42 +456,42 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>slice_logic</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>f7_muxes_available=16300</TD>
     <TD>f7_muxes_fixed=0</TD>
-    <TD>f7_muxes_used=16</TD>
-    <TD>f7_muxes_util_percentage=0.10</TD>
+    <TD>f7_muxes_used=0</TD>
+    <TD>f7_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>f8_muxes_available=8150</TD>
     <TD>f8_muxes_fixed=0</TD>
     <TD>f8_muxes_used=0</TD>
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=282</TD>
-    <TD>lut_as_logic_util_percentage=1.36</TD>
+    <TD>lut_as_logic_used=326</TD>
+    <TD>lut_as_logic_util_percentage=1.57</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=369</TD>
-    <TD>register_as_flip_flop_util_percentage=0.89</TD>
+    <TD>register_as_flip_flop_used=406</TD>
+    <TD>register_as_flip_flop_util_percentage=0.98</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=282</TD>
-    <TD>slice_luts_util_percentage=1.36</TD>
+    <TD>slice_luts_used=326</TD>
+    <TD>slice_luts_util_percentage=1.57</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=369</TD>
-    <TD>slice_registers_util_percentage=0.89</TD>
+    <TD>slice_registers_used=406</TD>
+    <TD>slice_registers_util_percentage=0.98</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=282</TD>
-    <TD>lut_as_logic_util_percentage=1.36</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=326</TD>
+    <TD>lut_as_logic_util_percentage=1.57</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -503,35 +499,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=71</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=71</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=84</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=84</TD>
-    <TD>register_driven_from_outside_the_slice_used=155</TD>
-    <TD>register_driven_from_within_the_slice_fixed=155</TD>
-    <TD>register_driven_from_within_the_slice_used=214</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=82</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=82</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=98</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=98</TD>
+    <TD>register_driven_from_outside_the_slice_used=180</TD>
+    <TD>register_driven_from_within_the_slice_fixed=180</TD>
+    <TD>register_driven_from_within_the_slice_used=226</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=369</TD>
-    <TD>slice_registers_util_percentage=0.89</TD>
-    <TD>slice_used=131</TD>
-    <TD>slice_util_percentage=1.61</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=406</TD>
+    <TD>slice_registers_util_percentage=0.98</TD>
+    <TD>slice_used=147</TD>
+    <TD>slice_util_percentage=1.80</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=85</TD>
+    <TD>slicel_used=96</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=46</TD>
+    <TD>slicem_used=51</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
     <TD>unique_control_sets_used=17</TD>
     <TD>unique_control_sets_util_percentage=0.21</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.21</TD>
-    <TD>using_o5_and_o6_used=55</TD>
-    <TD>using_o5_output_only_fixed=55</TD>
+    <TD>using_o5_and_o6_used=53</TD>
+    <TD>using_o5_output_only_fixed=53</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=227</TD>
+    <TD>using_o6_output_only_used=273</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -623,10 +619,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:01:08s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:01:03s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=75.629MB</TD>
-    <TD>memory_peak=1086.336MB</TD>
+    <TD>memory_gain=127.844MB</TD>
+    <TD>memory_peak=1128.188MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
